# uv-sbom

./: .gitignore  AGENTS.md  ARCHITECTURE-JP.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README-JP.md  README-ja.md  README.md  RELEASE.md  SECURITY.md
.claude/: CLAUDE.md  competitive-landscape.md  feature-triage.md  instructions.md  issue-guidelines.md  output-design.md  product-vision.md  project-context.md
.claude/agents/: architect.md  devrel.md  i18n.md  pdm.md  pm.md  qa.md  release.md  security.md
.claude/skills/: commit.md  implement.md  issue.md  pr.md  pre-push.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/dependabot/: SKILL.md
.claude/skills/ideate/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/pre-push/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/split/: SKILL.md
.claude/skills/sync-config/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: DISTRIBUTION_GUIDE.md  PYPI_WRAPPER_SETUP.md
examples/sample-project/: pyproject.toml
examples/sample-project/config/: uv-sbom.config.yml
examples/suggest-fix-project/: README-JP.md  README.md  pyproject.toml
examples/workspace/: .gitignore  README.md  pyproject.toml
python-wrapper/: README.md  pyproject.toml
python-wrapper/uv_sbom_bin/: __init__.py  install.py
src/: cli.rs  config.rs  cyclonedx.rs  error.rs  lib.rs  license.rs  lockfile.rs  main.rs  markdown.rs
src/adapters/: mod.rs
src/adapters/inbound/: mod.rs
src/adapters/outbound/: mod.rs
src/adapters/outbound/console/: mod.rs  progress_reporter.rs
src/adapters/outbound/filesystem/: file_reader.rs  file_writer.rs  mod.rs
src/adapters/outbound/formatters/: cyclonedx_formatter.rs  markdown_formatter.rs  mod.rs
src/adapters/outbound/formatters/cyclonedx_formatter/: mod.rs  schema.rs
src/adapters/outbound/formatters/cyclonedx_formatter/builders/: component.rs  dependency.rs  metadata.rs  mod.rs  property.rs  vulnerability.rs
src/adapters/outbound/formatters/markdown_formatter/: helpers.rs  links.rs  mod.rs  section.rs  table.rs  vuln_render.rs
src/adapters/outbound/network/: caching_pypi_client.rs  mod.rs  osv_client.rs  pypi_client.rs  pypi_maintenance_client.rs
src/adapters/outbound/uv/: mod.rs  uv_lock_adapter.rs  workspace_reader.rs
src/application/: mod.rs
src/application/dto/: mod.rs  output_format.rs  sbom_request.rs  sbom_response.rs  vulnerability_check_request.rs  vulnerability_check_response.rs
src/application/factories/: formatter_factory.rs  mod.rs  presenter_factory.rs
src/application/read_models/: abandoned_package.rs  component_view.rs  dependency_view.rs  license_compliance_view.rs  mod.rs  resolution_guide_view.rs  sbom_read_model.rs  sbom_read_model_builder.rs  upgrade_recommendation_view.rs  vulnerability_view.rs
src/application/read_models/sbom_read_model_builder/: component_builder.rs  dependency_builder.rs  license_compliance_builder.rs  metadata_builder.rs  mod.rs  resolution_guide_builder.rs  upgrade_recommendation_builder.rs  vulnerability_builder.rs
src/application/use_cases/: check_abandoned_packages.rs  check_vulnerabilities.rs  fetch_licenses.rs  generate_sbom.rs  mod.rs  test_doubles.rs
src/application/use_cases/generate_sbom/: mod.rs  tests.rs
src/cli/: config_resolver.rs  mod.rs  runner.rs
src/i18n/: mod.rs
src/ports/: mod.rs
src/ports/inbound/: mod.rs  sbom_generation_port.rs
src/ports/outbound/: enriched_package.rs  formatter.rs  license_repository.rs  lockfile_reader.rs  maintenance_repository.rs  mod.rs  output_presenter.rs  progress_reporter.rs  project_config_reader.rs  uv_lock_simulator.rs  vulnerability_repository.rs  workspace_reader.rs
src/sbom_generation/: mod.rs
src/sbom_generation/domain/: dependency_graph.rs  license_info.rs  license_policy.rs  mod.rs  package.rs  resolution_guide.rs  sbom_metadata.rs  upgrade_recommendation.rs  vulnerability.rs
src/sbom_generation/domain/services/: cve_filter.rs  license_compliance_checker.rs  mod.rs  resolution_analyzer.rs  upgrade_advisor.rs  vulnerability_checker.rs
src/sbom_generation/policies/: license_priority.rs  mod.rs  spdx_license_map.rs
src/sbom_generation/services/: dependency_analyzer.rs  mod.rs  package_filter.rs  sbom_generator.rs
src/shared/: error.rs  mod.rs  result.rs  security.rs
tests/: e2e_config_file.rs  e2e_init.rs  e2e_license_compliance.rs  e2e_test.rs  e2e_vulnerability_threshold.rs  e2e_workspace.rs  integration_test.rs
tests/fixtures/sample-project/: pyproject.toml
tests/fixtures/vulnerable_project/: pyproject.toml
tests/test_utilities/: mod.rs
tests/test_utilities/mocks/: mock_license_repository.rs  mock_lockfile_reader.rs  mock_progress_reporter.rs  mock_project_config_reader.rs  mod.rs
(+9 files in other folders)
