[package]
name = "uv-sbom"
version = "1.0.0"
edition = "2021"
authors = ["Taketo Yoda <exhaust7.drs@gmail.com>"]
description = "SBOM generation tool for uv projects - Generate CycloneDX SBOMs from uv.lock files"
license = "MIT"
repository = "https://github.com/Taketo-Yoda/uv-sbom"
homepage = "https://github.com/Taketo-Yoda/uv-sbom"
documentation = "https://github.com/Taketo-Yoda/uv-sbom"
readme = "README.md"
keywords = ["sbom", "cyclonedx", "uv", "security", "supply-chain"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".claude/",
    ".github/",
    "tests/fixtures/",
    "sample-project/",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
urlencoding = "2.1"
serde_yml = "0.0.12"
indicatif = "0.18"
dashmap = "6"
owo-colors = "4.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"

[[bin]]
name = "uv-sbom"
path = "src/main.rs"
